Fix background sizing on iPhone

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ body {
   background: var(--bg-color-transparent), url('../images/lucas-on-trike.jpg');
   background-attachment: fixed;
   background-position: 0 0;
-  background-size: cover;
+  background-size: 100vh;
   color: var(--text-color);
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   overflow-x: hidden;
